// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders Avatars correctly when set src, icon and string 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--sm"
  >
    <img
      alt="my avatar"
      class="zw-avatar--image"
      src="site/images/avatar/avatar.png"
    />
  </span>
</div>
`;

exports[`Avatar renders Avatars of different shape correctly 1`] = `
<div>
  <Avatar
    prefixCls="zw-avatar"
    shape="circle"
    size="md"
  />
  <Avatar
    prefixCls="zw-avatar"
    shape="circle"
    size="md"
  />
  <Avatar
    prefixCls="zw-avatar"
    shape="square"
    size="md"
  />
</div>
`;

exports[`Avatar renders Avatars of different size correctly 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--xl"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      XL
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--lg"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      LG
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--md"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      MD
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--sm"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      SM
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--xs"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      XS
    </span>
  </span>
</div>
`;

exports[`Avatar renders Avatars of different type correctly 1`] = `
<div>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--sm"
    style="font-size:12px"
  >
    <span
      class="zw-avatar--string"
    >
      USER
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--sm"
    style="color:red;background-color:rgb(249, 232, 8)"
  >
    <span
      class="zw-avatar--string"
      style="transform:scale(1) translateX(-50%);-webkit-transform:scale(1) translateX(-50%);-ms-transform:scale(1) translateX(-50%)"
    >
      USER
    </span>
  </span>
  <span
    class="zw-avatar zw-avatar--circle zw-avatar--sm"
  >
    <img
      alt="my avatar"
      class="zw-avatar--image"
      src="site/images/avatar/avatar.png"
    />
  </span>
</div>
`;
